--- a/v0.1
+++ b/v0.1
@@ -7,7 +7,6 @@
 #include <sstream> 
 #include <cstdlib>
 #include <ctime>
-#include <utility>
 
 using std::cout;
 using std::cin;
@@ -31,21 +30,9 @@ Studentas ivesk(string vard, string pav);
 double median(vector<int> v);
 Studentas generuoti(string vard, string pav, int ndskaicius);
 vector<Studentas> nuskaityti(string failas);
-Studentas generuotistudenta(int id, int ndskaicius = 5);
-void generuotitxt(const string& pavadinimas, int kiekis);
 
 int main() {
     srand(time(0));
-    vector<std::pair<string, int>> failai = {
-        {"studentai1000.txt", 1000},
-        {"studentai10000.txt", 10000},
-        {"studentai100000.txt", 100000},
-        {"studentai1000000.txt", 1000000},
-        {"studentai10000000.txt", 10000000}
-    };
-    for (auto& f : failai) {
-        generuotitxt(f.first, f.second);
-    }
     vector<Studentas> Grupe;
     char pasirinkimas;
     string pasirinkimas2;
@@ -65,8 +52,7 @@ int main() {
     else {
         int kiekis;
         while (true) {
-            cout << "Kiek studentu norite prideti? ";
-            cin >> kiekis;
+            cout << "Kiek studentu norite prideti? "; cin >> kiekis;
             if (!cin || kiekis <= 0) {
                 cout << "Ivesta neteisingai. Bandykite dar karta." << endl;
                 cin.clear();
@@ -187,6 +173,7 @@ Studentas generuoti(string vard, string pav, int ndskaicius) {
     Laik.Medianosrez = Laik.egzas * 0.6 + median(Laik.paz) * 0.4;
     return Laik;
 }
+
 vector<Studentas> nuskaityti(string failas) {
     vector<Studentas> Grupe;
     std::ifstream fd(failas);
@@ -196,67 +183,25 @@ vector<Studentas> nuskaityti(string failas) {
     }
     string antraste;
     getline(fd, antraste);
-    string eilute;
-    while (getline(fd, eilute)) {
-        std::istringstream ss(eilute);
-        Studentas Laik;
-        ss >> Laik.vard >> Laik.pav;
+    Studentas Laik;
+    while (fd >> Laik.vard >> Laik.pav) {
         Laik.paz.clear();
-        int skaicius;
+        int pazymys;
         vector<int> laikini;
-        while (ss >> skaicius) {
-            laikini.push_back(skaicius);
+        while (fd.peek() != '\n' && fd >> pazymys) {
+            laikini.push_back(pazymys);
         }
         if (laikini.empty()) continue;
         Laik.egzas = laikini.back();
         laikini.pop_back();
         int sum = 0;
-        for (int p : laikini) {
-            Laik.paz.push_back(p);
-            sum += p;
+        for (int x : laikini) {
+            Laik.paz.push_back(x);
+            sum += x;
         }
-        if (!Laik.paz.empty()) {
-            Laik.Vidurkiorez = Laik.egzas * 0.6 + double(sum) / Laik.paz.size() * 0.4;
-            Laik.Medianosrez = Laik.egzas * 0.6 + median(Laik.paz) * 0.4;
-        }
-        else {
-            Laik.Vidurkiorez = Laik.Medianosrez = Laik.egzas * 0.6;
-        }
+        Laik.Vidurkiorez = Laik.egzas * 0.6 + double(sum) / Laik.paz.size() * 0.4;
+        Laik.Medianosrez = Laik.egzas * 0.6 + median(Laik.paz) * 0.4;
         Grupe.push_back(Laik);
     }
     return Grupe;
-}
-Studentas generuotistudenta(int id, int ndskaicius) {
-    Studentas s;
-    s.vard = "Vardas" + std::to_string(id);
-    s.pav = "Pavarde" + std::to_string(id);
-    int sum = 0;
-    for (int i = 0; i < ndskaicius; i++) {
-        int pazymys = rand() % 10 + 1;
-        s.paz.push_back(pazymys);
-        sum += pazymys;
-    }
-    s.egzas = rand() % 10 + 1;
-    s.Vidurkiorez = s.egzas * 0.6 + (double)sum / s.paz.size() * 0.4;
-    s.Medianosrez = s.egzas * 0.6 + median(s.paz) * 0.4;
-    return s;
-}
-
-void generuotitxt(const string& pavadinimas, int kiekis) {
-    std::ofstream fout(pavadinimas);
-    if (!fout) {
-        cout << "Nepavyko sukurti failo: " << pavadinimas << endl;
-        return;
-    }
-    fout << "Vardas Pavarde ";
-    for (int i = 1; i <= 5; i++) fout << "ND" << i << " ";
-    fout << "Egzaminas\n";
-    for (int i = 1; i <= kiekis; i++) {
-        Studentas s = generuotistudenta(i, 5);
-        fout << s.vard << " " << s.pav << " ";
-        for (int paz : s.paz) fout << paz << " ";
-        fout << s.egzas << "\n";
-    }
-    fout.close();
-    cout << "Failas " << pavadinimas << " sukurtas" << endl;
 }
